**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

ISSUES: it looks like the beta divergence check is missing in release code
in bgam.fitd.

1.8-19

* preinitialize and postproc components of extended families are now functions,
  not expressions.

* redundant 'n' argument removed from extended family 'ls' functions.

* Convergence checking can step fail earlier in fast.REML.fit. If trial step 
  is no improvement and equal to previous best (to within a tolerance), then 
  terminate with step failure after a few step halvings if situation persists. 
  Thanks to Zheyuan Li for reporting problem. 

1.8-18

* Tweak to 'newton' to further reduce chance of false convergence at 
  indefinite point.

* Fix to bam.update to deal with NAs in response.

* 'scat' family now takes a 'min.df' argument which defaults to 3. Could 
  otherwise occasionally have indefinite LAML problems as df headed towards 2.

* Fix to `gam.fit4' where in rare circumstances the PIRLS iteration could 
  finish at an indefinite point, spoiling implicit differentiation. 

* `gam.check' modified to fix a couple of issues with `gamm' fitted models, and 
  to warn that interpretability is reduced for such models. 

* `qq.gam' default method slight modification to default generation of reference
  quantiles. In theory previous method could cause a problem if enough 
  residuals were exactly equal.

* Fix to `plot.mrf.smooth' to deal with models with by variables.  

* `plot.gam' fix to handling of plot limits when using 'trans' (from 1.8-16 
  'trans' could be applied twice). 

* `plot.gam' argument 'rug' now defaults to 'NULL' corresponding to 'rug=TRUE'
  if the number of data is <= 10000 and 'rug=FALSE' otherwise.

* bam(...,discrete=TRUE) could fail if NAs in the smooth terms caused data rows