@@ -2,7 +2,7 @@
 \alias{family.mgcv}
 %- Also NEED an `\alias' for EACH other topic documented here.
 \title{Distribution families in mgcv}
-\description{As well as the standard families documented in \code{\link{family}} (see also \code{\link{glm}}) which can be used with functions \code{\link{gam}}, \code{\link{bam}} and \code{\link{gamm}}, \code{mgcv} also supplies some extra families, most of which are currently only usable with \code{\link{gam}}. These are described here.
+\description{As well as the standard families documented in \code{\link{family}} (see also \code{\link{glm}}) which can be used with functions \code{\link{gam}}, \code{\link{bam}} and \code{\link{gamm}}, \code{mgcv} also supplies some extra families, most of which are currently only usable with \code{\link{gam}}, although some can also be used with \code{bam(...,discrete=TRUE)}. These are described here.
 }
 
 
@@ -17,7 +17,7 @@ The following families are in the exponential family given the value of a single
 
 
 The following families are for regression type models dependent on a single linear predictor, and with a log likelihood
-which is a sum of independent terms, each coprresponding to a single response observation. Usable only with \code{\link{gam}}, with smoothing parameter estimation by \code{"REML"} or \code{"ML"} (the latter does not integrate the unpenalized and parameteric effects out of the marginal likelihood optimized for the smoothing parameters).
+which is a sum of independent terms, each coprresponding to a single response observation. Usable with \code{\link{gam}}, with smoothing parameter estimation by \code{"REML"} or \code{"ML"} (the latter does not integrate the unpenalized and parameteric effects out of the marginal likelihood optimized for the smoothing parameters). Also usable with \code{bam(...,discrete=TRUE)}.
 \itemize{
 \item \code{\link{ocat}} for ordered categorical data.
 \item \code{\link{tw}} for Tweedie distributed data, when the power parameter relating the variance to the mean is to be estimated.
